fix/spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,10 @@ $primary: rgb(191, 191, 191);
 .info {
 	width: 100%;
 	background: rgb(191, 191, 191);
-	margin: 0 auto;
+	margin: 0 auto 1rem;
+	@media (max-width: 1440px) {
+		margin-bottom: 0.5rem;
+	}
 
 	&__text {
 		padding: 2.5rem;
@@ -146,9 +149,10 @@ $primary: rgb(191, 191, 191);
 }
 
 .game {
+	width: fit-content;
+	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
 
 	&__card {
 		margin: 1rem;
